Add new notebooks
Signed-off-by: David Wang <00107082@163.com>

--- a/notebooks/Pod Network Connection check.ipynb
+++ b/notebooks/Pod Network Connection check.ipynb
@@ -34,7 +34,7 @@
    "outputs": [],
    "source": [
     "from k8sclient.keywords import list_ready_nodes\n",
-    "from k8sclient.K8SClient import ServicePort\n",
+    "from k8sclient.Components import ServicePort\n",
     "import datetime\n",
     "\n",
     "nodes = list_ready_nodes()\n",
@@ -80,11 +80,9 @@
    },
    "outputs": [],
    "source": [
-    "from k8sclient.K8SClient import PodBuilder\n",
+    "from k8sclient.Components import PodBuilder\n",
     "\n",
-    "CREATE = 0\n",
-    "DELETE = 1\n",
-    "def deploy(node, action=CREATE):\n",
+    "def deploy(node):\n",
     "    node_mark = \"-\".join(node.split(\".\"))\n",
     "    for i in range(2):\n",
     "        pod_name = (\"pod-%s-%d\" % (node_mark, i)) + uid\n",
@@ -106,12 +104,8 @@
     "        ).attache_service(\n",
     "            global_service\n",
     "        )\n",
-    "        if action == CREATE:\n",
-    "            pod.deploy()\n",
-    "            service.deploy()\n",
-    "        else:\n",
-    "            pod.un_deploy()\n",
-    "            service.un_deploy()"
+    "        pod.deploy()\n",
+    "        service.deploy()\n"
    ]
   },
   {
@@ -130,7 +124,7 @@
    "outputs": [],
    "source": [
     "for node in nodes:\n",
-    "    deploy(node, CREATE)"
+    "    deploy(node)"
    ]
   },
   {
@@ -149,26 +143,6 @@
    "outputs": [],
    "source": [
     "global_service.deploy()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Undeploy"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "for node in nodes:\n",
-    "    deploy(node, DELETE)\n",
-    "global_service.un_deploy()"
    ]
   },
   {
